--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,8 @@ jobs:
         # You may pin to the exact commit or the version.
         # uses: game-ci/unity-builder@3d0eb0805bbe2df90e319abbe42e41d0b9105625
         uses: game-ci/unity-builder@v2.0.0-alpha-14
-          
+      - name: Unity - Activate
+        # You may pin to the exact commit or the version.
+        # uses: game-ci/unity-activate@cda570d7590fe63b7f718e6a052e170462c07361
+        uses: game-ci/unity-activate@v1.3
+
