--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,16 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
-
+        
+      - name: Unity - Request Activation File
+        # You may pin to the exact commit or the version.
+        # uses: game-ci/unity-request-activation-file@de1240e14622163607d94eecb76d8fbc250d4504
+        uses: game-ci/unity-request-activation-file@v2.0-alpha-1
       - name: Unity - Activate
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         # You may pin to the exact commit or the version.
         # uses: game-ci/unity-activate@cda570d7590fe63b7f718e6a052e170462c07361
         uses: game-ci/unity-activate@v1.3
@@ -39,4 +47,6 @@ jobs:
         # You may pin to the exact commit or the version.
         # uses: game-ci/unity-builder@3d0eb0805bbe2df90e319abbe42e41d0b9105625
         uses: game-ci/unity-builder@v2.0.0-alpha-14
+        
+      
 
