--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,11 @@ jobs:
         # You may pin to the exact commit or the version.
         # uses: game-ci/unity-request-activation-file@de1240e14622163607d94eecb76d8fbc250d4504
         uses: game-ci/unity-request-activation-file@v2.0-alpha-1
+      - name: Expose as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ steps.getManualLicenseFile.outputs.filePath }}
+          path: ${{ steps.getManualLicenseFile.outputs.filePath }}
       - name: Unity - Activate
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
